--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
             getData("json/weapons.json", (data) => weapons = data );
             getData("assets/Levels/L1.json", (data) => rooms = data );
 
-            
+
             var fade = 2;
             var room = "5-5";
 
@@ -178,13 +178,13 @@
             };   
 
             x = 0
-            $(document).ready(function(params) {                
+            $(document).ready(function() {                
                 while (x != 4) {
-                    selector = Math.floor(Math.random() * (Object.keys(window.rooms).length - 1));
+                    selector = Math.floor(Math.random() * (Object.keys(rooms).length - 1));
                     
-                    if (rooms[Object.keys(window.rooms)[selector]]['enemy'].length == 0 && Object.keys(window.rooms)[selector] != '5-5' && Object.keys(window.rooms)[selector] != '5-4') {
+                    if (rooms[Object.keys(rooms)[selector]]['enemy'].length == 0 && Object.keys(rooms)[selector] != '5-5' && Object.keys(rooms)[selector] != '5-4') {
                         x += 1;
-                        rooms[Object.keys(window.rooms)[selector]]['enemy'].push(Object.keys(foes)[Math.floor(Math.random() * 9)][0]);
+                        rooms[Object.keys(rooms)[selector]]['enemy'].push(Object.keys(foes)[Math.floor(Math.random() * 9)][0]);
                     };
                 };
             });
