--- a/index.html
+++ b/index.html
@@ -162,9 +162,9 @@
             getData("json/player.json", (data) => player = data );
             getData("json/foes.json", (data) => foes = data );
             getData("json/weapons.json", (data) => weapons = data );
-            getData("assets/Levels/L1.json", (data) => rooms = data )
-                .then( console.log( Object.keys( window.rooms ) ) )
-                .then( spawnMonsters( window.rooms ) );
+            getData("assets/Levels/L1.json", (data) => rooms = data ).then(function() {
+                spawnMonsters( window.rooms );
+            });
 
 
             var fade = 2;
