--- a/index.html
+++ b/index.html
@@ -137,11 +137,9 @@
             </div>
         </div>
 
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"></script>
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
         <script src="assets/js/main.js"></script>
-
-        <script src="assets/js/actions.js"></script>
 
         <script>
             var armour;
