--- a/index.html
+++ b/index.html
@@ -145,6 +145,8 @@
             <div class="update-log">
                 <pre>
                     <code>
+                        <span class="markdown-green">23/06/2022</span>
+
                         <span class="markdown-blue"># Update Log</span>
                         <span class="markdown-red">-</span> The page now has an actual favicon and title.
                         <span class="markdown-red">-</span> Customised scroll bar for elements such as the inventory.
@@ -161,6 +163,11 @@
                         <span class="markdown-red">-</span> Creating status effects such as Poisoned, Enraged and Undead.
                         <span class="markdown-red">-</span> Creating usable single-use potions and poisons.
                         <span class="markdown-red">-</span> Capping the inventory to a maximum capacity yet to be decided.
+                        <span class="markdown-red">-</span> Prevent running from monsters.
+
+                        <span class="markdown-blue"># Bugs</span>
+                        <span class="markdown-red">-</span> Player death is not permanent.
+                        <span class="markdown-red">-</span> The vampiric trait heals for floating point numbers.
         
                         <span class="markdown-italics">Please note that visuals do not work properly on mobile devices.</span>
                     </code>
