--- a/update-logs.html
+++ b/update-logs.html
@@ -41,6 +41,7 @@
 <span class="markdown-red">-</span> Creating usable single-use potions and poisons.
 <span class="markdown-red">-</span> Capping the inventory to a maximum capacity yet to be decided.
 <span class="markdown-red">-</span> Prevent running from monsters.
+<span class="markdown-red">-</span> Create an Enchantment system.
 
 <span class="markdown-blue"># Bugs</span>
 <span class="markdown-red">-</span> Player death is not permanent.
