--- a/index.html
+++ b/index.html
@@ -180,6 +180,7 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"></script>
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
         <script src="assets/js/main.js"></script>
+        <script src="assets/js/traits.js"></script>
 
         <script>
             var armour = null;
