--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                                             <button class="inventory-item tip" itemcatagory="Weapon" itemtype="Club">Club</button>
                                             <button class="inventory-item tip" itemcatagory="Weapon" itemtype="Dagger">Dagger</button>
                                             <button class="inventory-item tip" itemcatagory="Weapon" itemtype="Greatsword">Greatsword</button>
-                                            <button class="inventory-item tip" itemcatagory="Weapon" itemtype="Halberd">Halberd</button>
+                                            <button class="inventory-item tip" itemcatagory="Weapon" itemtype="Spear">Spear</button>
                                             <button class="inventory-item tip" itemcatagory="Weapon" itemtype="Longsword">Longsword</button>
                                             <button class="inventory-item tip" itemcatagory="Weapon" itemtype="Mace">Mace</button>
                                             <button class="inventory-item tip" itemcatagory="Weapon" itemtype="Short Spear">Short Spear</button>
