--- a/index.html
+++ b/index.html
@@ -242,6 +242,6 @@
             };
 
         </script>
-    <div id="log-store"></div>
+    <div id="log-store" style="display: none; flex-direction: column;"></div>
     </body>
 </html>
