--- a/index.html
+++ b/index.html
@@ -242,6 +242,8 @@
             };
 
         </script>
-    <div id="log-store" style="display: none; flex-direction: column;"></div>
+        <div class="adventure-container" style="display: none;">
+            <div class="adventure-log" id="log-store" style="flex-direction: column;"></div>
+        </div>
     </body>
 </html>
