--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                                     </div>
                                 </div>
                                 <div class="info-box border-shadow" style="overflow: auto;">
-                                    <span class="info-title">Log</span>
+                                    <button class="info-title" onclick="$('.adventure-container').show()">Log</button>
                                     <div class="info-content" style="max-height: 300px;">
                                         <span class="info-value" id="infoLog"></span>
                                     </div>
