--- a/index.html
+++ b/index.html
@@ -125,7 +125,9 @@
                                 <div class="info-box border-shadow" style="overflow: auto;">
                                     <button class="info-title" onclick="$('.adventure-container').show()">Log</button>
                                     <div class="info-content" style="max-height: 300px;">
-                                        <span class="info-value" id="infoLog"></span>
+                                        <span class="info-value" id="infoLog">
+                                            <span>The player begins their adventure.</span>
+                                        </span>
                                     </div>
                                 </div>
                                 <div class="info-box border-shadow row justify-content-center" style="margin-top: auto;">
