--- a/update-logs.html
+++ b/update-logs.html
@@ -34,9 +34,9 @@
 <span class="markdown-red">-</span> Enemies will no longer generate with just the first 2 letters of their name.
 
 <span class="markdown-blue"># Next Tasks</span>
-<span class="markdown-red">-</span> Making the log system show the most recent input, with an option to view all previous log inputs. ✓
+<span class="markdown-red">-</span> Making the log system show the most recent input, with an option to view all previous log inputs. <span class="markdown-green">✓</span>
 <span class="markdown-red">-</span> Allowing the player to get to the 2nd and 3rd levels.
-<span class="markdown-red">-</span> Making more gear and enemy traits, as well as applying them better in combat. ✓
+<span class="markdown-red">-</span> Making more gear and enemy traits, as well as applying them better in combat. <span class="markdown-green">✓</span>
 <span class="markdown-red">-</span> Creating status effects such as Poisoned, Enraged and Undead.
 <span class="markdown-red">-</span> Creating usable single-use potions and poisons.
 <span class="markdown-red">-</span> Capping the inventory to a maximum capacity yet to be decided.
@@ -45,7 +45,7 @@
 
 <span class="markdown-blue"># Bugs</span>
 <span class="markdown-red">-</span> Player death is not permanent.
-<span class="markdown-red">-</span> The vampiric trait heals for floating point numbers. ✓
+<span class="markdown-red">-</span> The vampiric trait heals for floating point numbers. <span class="markdown-green">✓</span>
 
 <span class="markdown-italics">Please note that visuals do not work properly on mobile devices.</span>
 </code>
