--- a/index.html
+++ b/index.html
@@ -119,6 +119,9 @@
                                             <button class="inventory-item tip" itemcatagory="Weapon" itemtype="Mace">Mace</button>
                                             <button class="inventory-item tip" itemcatagory="Weapon" itemtype="Short Spear">Short Spear</button>
                                             <button class="inventory-item tip" itemcatagory="Weapon" itemtype="Short Sword">Short Sword</button>
+                                            <button class="inventory-item tip" itemcatagory="Potion" itemtype="Lesser Healing">Lesser Healing</button>
+                                            <button class="inventory-item tip" itemcatagory="Potion" itemtype="Healing">Healing</button>
+                                            <button class="inventory-item tip" itemcatagory="Potion" itemtype="Greater Healing">Greater Healing</button>
                                         </span>
                                     </div>
                                 </div>
