--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
                                             <button class="inventory-item tip" itemcatagory="Potion" itemtype="Potion of Lesser Healing">Potion of Lesser Healing</button>
                                             <button class="inventory-item tip" itemcatagory="Potion" itemtype="Potion of Healing">Potion of Healing</button>
                                             <button class="inventory-item tip" itemcatagory="Potion" itemtype="Potion of Greater Healing">Potion of Greater Healing</button>
+                                            <button class="inventory-item tip" itemcatagory="Potion" itemtype="Potion of Strength">Potion of Strength</button>
                                         </span>
                                     </div>
                                 </div>
