--- a/update-logs.html
+++ b/update-logs.html
@@ -38,7 +38,7 @@
 <span class="markdown-red">-</span> Allowing the player to get to the 2nd and 3rd levels.
 <span class="markdown-red">-</span> Making more gear and enemy traits, as well as applying them better in combat. <span class="markdown-green">✓</span>
 <span class="markdown-red">-</span> Creating status effects such as Poisoned, Enraged and Undead.
-<span class="markdown-red">-</span> Creating usable single-use potions and poisons.
+<span class="markdown-red">-</span> Creating usable single-use potions and poisons. <span class="markdown-green">✓</span>
 <span class="markdown-red">-</span> Capping the inventory to a maximum capacity yet to be decided.
 <span class="markdown-red">-</span> Prevent running from monsters.
 <span class="markdown-red">-</span> Create an Enchantment system.
