--- a/index.html
+++ b/index.html
@@ -209,6 +209,7 @@
             getData("json/player.json", (data) => player = data );
             getData("json/foes.json", (data) => foes = data );
             getData("json/armour.json", (data) => armour = data );
+            getData("json/poisons.json", (data) => poisons = data );
             getData("json/potions.json", (data) => potions = data );
             getData("json/weapons.json", (data) => weapons = data );
             getData("assets/Levels/L1.json", (data) => rooms = data );
