--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@
                                             <button class="inventory-item tip" itemcatagory="Potion" itemtype="Potion of Healing">Potion of Healing</button>
                                             <button class="inventory-item tip" itemcatagory="Potion" itemtype="Potion of Greater Healing">Potion of Greater Healing</button>
                                             <button class="inventory-item tip" itemcatagory="Potion" itemtype="Potion of Power">Potion of Power</button>
+                                            <button class="inventory-item tip" itemcatagory="Poison" itemtype="Poison">Poison</button>
                                         </span>
                                     </div>
                                 </div>
