--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                                     <span class="info-title">Weapon</span>
                                     <div class="info-content">
                                         <span class="info-value" id="playerWeapon">
-                                            <button class="equipped-item tip" itemcatagory="Weapon" itemtype="Unarmed">Unarmed</button>
+                                            <button class="equipped-item tip" itemcatagory="Weapon" itemtype="Unarmed" extraTraits='[]'>Unarmed</button>
                                         </span>
                                     </div>
                                 </div>
@@ -94,7 +94,7 @@
                                     <span class="info-title">Armour</span>
                                     <div class="info-content">
                                         <span class="info-value" id="playerArmour">
-                                            <button class="equipped-item tip" itemcatagory="Armour" itemtype="Unarmoured">Unarmoured</button>
+                                            <button class="equipped-item tip" itemcatagory="Armour" itemtype="Unarmoured" extraTraits='[]'>Unarmoured</button>
                                         </span>
                                     </div>
                                 </div>
@@ -108,22 +108,22 @@
                                     <span class="info-title">Inventory</span>
                                     <div class="info-content">
                                         <span class="info-value" id="playerInventory">
-                                            <button class="inventory-item tip" itemcatagory="Armour" itemtype="Leather">Leather</button>
-                                            <button class="inventory-item tip" itemcatagory="Armour" itemtype="Plate">Plate</button>
-                                            <button class="inventory-item tip" itemcatagory="Armour" itemtype="Spiked">Spiked</button>
-                                            <button class="inventory-item tip" itemcatagory="Weapon" itemtype="Club">Club</button>
-                                            <button class="inventory-item tip" itemcatagory="Weapon" itemtype="Dagger">Dagger</button>
-                                            <button class="inventory-item tip" itemcatagory="Weapon" itemtype="Greatsword">Greatsword</button>
-                                            <button class="inventory-item tip" itemcatagory="Weapon" itemtype="Spear">Spear</button>
-                                            <button class="inventory-item tip" itemcatagory="Weapon" itemtype="Longsword">Longsword</button>
-                                            <button class="inventory-item tip" itemcatagory="Weapon" itemtype="Mace">Mace</button>
-                                            <button class="inventory-item tip" itemcatagory="Weapon" itemtype="Short Spear">Short Spear</button>
-                                            <button class="inventory-item tip" itemcatagory="Weapon" itemtype="Short Sword">Short Sword</button>
-                                            <button class="inventory-item tip" itemcatagory="Potion" itemtype="Potion of Lesser Healing">Potion of Lesser Healing</button>
-                                            <button class="inventory-item tip" itemcatagory="Potion" itemtype="Potion of Healing">Potion of Healing</button>
-                                            <button class="inventory-item tip" itemcatagory="Potion" itemtype="Potion of Greater Healing">Potion of Greater Healing</button>
-                                            <button class="inventory-item tip" itemcatagory="Potion" itemtype="Potion of Power">Potion of Power</button>
-                                            <button class="inventory-item tip" itemcatagory="Poison" itemtype="Poison">Poison</button>
+                                            <button class="inventory-item tip" itemcatagory="Armour" itemtype="Leather" extraTraits='[]'>Leather</button>
+                                            <button class="inventory-item tip" itemcatagory="Armour" itemtype="Plate" extraTraits='[]'>Plate</button>
+                                            <button class="inventory-item tip" itemcatagory="Armour" itemtype="Spiked" extraTraits='[]'>Spiked</button>
+                                            <button class="inventory-item tip" itemcatagory="Weapon" itemtype="Club" extraTraits='[]'>Club</button>
+                                            <button class="inventory-item tip" itemcatagory="Weapon" itemtype="Dagger" extraTraits='[]'>Dagger</button>
+                                            <button class="inventory-item tip" itemcatagory="Weapon" itemtype="Greatsword" extraTraits='[]'>Greatsword</button>
+                                            <button class="inventory-item tip" itemcatagory="Weapon" itemtype="Spear" extraTraits='[]'>Spear</button>
+                                            <button class="inventory-item tip" itemcatagory="Weapon" itemtype="Longsword" extraTraits='[]'>Longsword</button>
+                                            <button class="inventory-item tip" itemcatagory="Weapon" itemtype="Mace" extraTraits='[]'>Mace</button>
+                                            <button class="inventory-item tip" itemcatagory="Weapon" itemtype="Short Spear" extraTraits='[]'>Short Spear</button>
+                                            <button class="inventory-item tip" itemcatagory="Weapon" itemtype="Short Sword" extraTraits='[]'>Short Sword</button>
+                                            <button class="inventory-item tip" itemcatagory="Potion" itemtype="Potion of Lesser Healing" extraTraits='[]'>Potion of Lesser Healing</button>
+                                            <button class="inventory-item tip" itemcatagory="Potion" itemtype="Potion of Healing" extraTraits='[]'>Potion of Healing</button>
+                                            <button class="inventory-item tip" itemcatagory="Potion" itemtype="Potion of Greater Healing" extraTraits='[]'>Potion of Greater Healing</button>
+                                            <button class="inventory-item tip" itemcatagory="Potion" itemtype="Potion of Power" extraTraits='[]'>Potion of Power</button>
+                                            <button class="inventory-item tip" itemcatagory="Poison" itemtype="Poison" extraTraits='[]'>Poison</button>
                                         </span>
                                     </div>
                                 </div>
