--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                             <div class="item-wrapper">
                                 <div class="info-box border-shadow">
                                     <span class="info-title">Health</span>
-                                    <div class="info-content" style="justify-content: center;">
+                                    <div class="info-content">
                                         <span class="info-value" id="playerHealth">20</span>
                                     </div>
                                 </div>
