--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                                 canGo(room);
                                 checkRoom(room);
                                 $('#title').html(window.room);
-                                $(this).replaceWith(`<div class='pixel middle' id='enemy'></div>`);
+                                $(this).replaceWith(`<div class='pixel middle h4' id='enemy'></div>`);
                             " id="start">
                                 <div class="h4">Start</div>
                                 <div class="h4">Game</div>
