--- a/update-logs.html
+++ b/update-logs.html
@@ -19,6 +19,36 @@
         <main>
             <div class="container">
 
+<!-- 30/06/2022 -->
+<pre>
+<code>
+<span class="markdown-green">30/06/2022</span>
+
+<span class="markdown-blue"># Update Log</span>
+<span class="markdown-red">-</span> Implemented textures to the visible map.
+<span class="markdown-red">-</span> Created functions that allow for Enchantments. Yet to be implemented into gameplay.
+<span class="markdown-red">-</span> Created multiple Potions that restore health or increase damage.
+<span class="markdown-red">-</span> Added the trait 'Piercing' that halves the defending party's effective defence.
+<span class="markdown-red">-</span> Created a Log system to display what the player does and store each log for visualisation. (Click the Log Index to view)
+<span class="markdown-red">-</span> 
+
+<span class="markdown-blue"># Bug Fixes</span>
+<span class="markdown-red">-</span> The 'Vampiric' trait now works as intended. 
+
+<span class="markdown-blue"># Next Tasks</span>
+<span class="markdown-red">-</span> Allowing the player to get to the 2nd and 3rd levels.
+<span class="markdown-red">-</span> Creating status effects such as Poisoned, Enraged and Paralysed.
+<span class="markdown-red">-</span> Give functionality to poisons.
+<span class="markdown-red">-</span> Capping the inventory to a maximum capacity yet to be decided.
+<span class="markdown-red">-</span> Prevent running from monsters.
+
+<span class="markdown-blue"># Bugs</span>
+<span class="markdown-red">-</span> Player death is not permanent.
+
+<span class="markdown-italics">Please note that visuals do not work properly on mobile devices.</span>
+</code>
+</pre>
+
 <!-- 23/06/2022 -->
 <pre>
 <code>
@@ -41,7 +71,7 @@
 <span class="markdown-red">-</span> Creating usable single-use potions and poisons. <span class="markdown-green">✓</span>
 <span class="markdown-red">-</span> Capping the inventory to a maximum capacity yet to be decided.
 <span class="markdown-red">-</span> Prevent running from monsters.
-<span class="markdown-red">-</span> Create an Enchantment system.
+<span class="markdown-red">-</span> Create an Enchantment system. <span class="markdown-green">✓</span>
 
 <span class="markdown-blue"># Bugs</span>
 <span class="markdown-red">-</span> Player death is not permanent.
