Forgot to add the CSS

--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
         <base href="https://narikraus.github.io/Rogue-like-RPG/" target="_blank">
 
         <!-- Bootstrap CSS -->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
-        
-        <link href="assets/css/style.css" rel="stylesheet">
-        <link href="assets/css/pixel-image.css" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css">
+        <link rel="stylesheet" href="assets/vendor/jQuery PowerTip/jquery.powertip.min.css">
+
+        <link rel="stylesheet" href="assets/css/style.css">
+        <link rel="stylesheet" href="assets/css/pixel-image.css">
 
         <title>Rogue-Like RPG</title>
         <link rel="shortcut icon" href="assets/ico/Ico.ico">
